# quiz

./: LICENSE  README.md
.github/workflows/: docker-image.yml
backend/: .envrc  .gitignore  README.md  pyproject.toml  pytest.ini  tests
backend/quiz/: manage.py
backend/quiz/quiz/: asgi.py  settings.py  urls.py  wsgi.py
backend/quiz/quiz/settings/: base.py  development.py  production.py  tests.py
backend/quiz/quizAPI/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/quiz/quizAPI/fixtures/: test_api_data.json
backend/quiz/quizAPI/migrations/: 0001_initial.py  0002_alter_quiz_card_id_alter_quiz_quiz_id.py  0002_card_quiz_quizdetails_delete_flashcard_and_more.py  0003_alter_card_card_type.py  0004_alter_card_card_type.py  0005_alter_card_card_type.py  0006_rename_quiz_info_quiz_quiz.py  0007_alter_card_back_alter_card_front.py
backend/quiz/quizAPI/templates/: home.html
backend/quiz/quizAUTH/: apps.py  authenticate.py  tests.py  urls.py  views.py
backend/quiz/quizAUTH/fixtures/: test_auth_data.json
docker/: README.md  docker-compose.yaml
docker/backend/: Dockerfile  docker-entrypoint
docker/frontend/: Dockerfile  docker-entrypoint
