[project]
name = "quiz"
version = "0.1.0"
description = "Quiz Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-rest-framework>=0.1.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "markdown>=3.8",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "django-stubs>=5.2.1",
    "pytest>=8.4.1",
    "pytest-django>=4.8.0",
]
